--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "dayjs": "^1.11.13",
     "next": "15.3.1",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "sass": "^1.89.0"
   },
   "devDependencies": {
     "@types/node": "^20",
