layout, registration, etc

--- a/package.json
+++ b/package.json
@@ -14,14 +14,19 @@
     "@mui/icons-material": "^7.0.2",
     "@mui/material": "^7.0.2",
     "@mui/x-date-pickers": "^8.1.0",
+    "axios": "^1.9.0",
     "cookies-next": "^5.1.0",
     "dayjs": "^1.11.13",
+    "formik": "^2.4.6",
+    "js-cookie": "^3.0.5",
     "next": "15.3.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "sass": "^1.89.0"
+    "sass": "^1.89.0",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
